# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkuiaaa"
version = "0.1.2"
description = "It returns you a logged in requests session"
readme = "README.md"
authors = [{ name = "xiaotianxt", email = "tianyp@pku.edu.cn" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pku", "iaaa", "oauth"]
dependencies = [
    "requests"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/xiaotianxt/pkuiaaa"

[project.scripts]
realpython = "reader.__main__:main"